Fix: palette color not showing selected color for tabs more than 1 in color option

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -1745,10 +1745,6 @@
 	position: relative;
 }
 
-#customize-control-astra-color-palettes .ast-color-palette-wrap.active {
-	outline: 3px solid #037fb8;
-}
-
 #customize-control-astra-color-palettes .ast-color-palette-wrapper {
 	clear: both;
 	margin-top: 10px;
@@ -1780,10 +1776,6 @@
 	}
 }
 
-
-#customize-control-astra-color-palettes .ast-palette-selection-wrapper{
-    padding: 3px;
-}
 #customize-control-astra-color-palettes .ast-color-palette-wrap:hover{
     box-shadow: 0 0 0 2px #eeeeee;
 }
@@ -1803,10 +1795,12 @@
     background-color: rgb(0 0 0 / 55%);
     transition: .15s color ease-in-out,.15s background-color ease-in-out,.15s border-color ease-in-out;
 }
+
 #customize-control-astra-color-palettes .ast-color-palette-wrap.active .ast-palette-label-wrap,
 #customize-control-astra-color-palettes .ast-color-palette-wrap:hover .ast-palette-label-wrap{
     background-color: rgb(0 0 0 / 80%);
 }
+
 .components-button.astra-color-icon-indicate .astra-advanced-color-indicate .global-color{
     color: #fff;
     opacity: 1;
